--- a/src/main/resources/templates/member/memberDetail.html
+++ b/src/main/resources/templates/member/memberDetail.html
@@ -142,11 +142,11 @@
                             <p>
                             <div class="row">
                                 <div class="col-sm-4">
-                                    <label class="light-gray">Annivarsary: </label>
+                                    <label class="light-gray">Anniversary: </label>
                                 </div>
                                 <div class="col-sm-8 text-right">
                                     <span class="gray-text"
-                                          th:text="${#dates.format(member.annivarsaryDate, 'dd MMMM, yyyy')}""></span>
+                                          th:text="${#dates.format(member.anniversaryDate, 'dd MMMM, yyyy')}""></span>
                                 </div>
                             </div>
                             </p>
