--- a/src/main/resources/templates/member/manageMember.html
+++ b/src/main/resources/templates/member/manageMember.html
@@ -89,8 +89,8 @@
                                     </div>
 
                                     <div class="form-group">
-                                        <label>Annivarsary</label>
-                                        <input class="form-control" id="annivarsaryDate" th:field="*{annivarsaryDate}">
+                                        <label>Anniversary</label>
+                                        <input class="form-control" id="anniversaryDate" th:field="*{anniversaryDate}">
                                     </div>
 
                                     <div class="form-group" th:classappend="${#fields.hasErrors('fatherMemberValue')} ? has-error">
@@ -225,7 +225,7 @@
         maxDate: 0
     });
 
-    $("#annivarsaryDate").datepicker({
+    $("#anniversaryDate").datepicker({
         inline: true,
         maxDate: 0
     });
