--- a/src/main/resources/templates/group/groupDetail.html
+++ b/src/main/resources/templates/group/groupDetail.html
@@ -98,7 +98,7 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <div class="panel panel-default">
+                <div class="panel panel-primary">
                     <div class="panel-heading">
                         Members who are in this Group
                     </div>
