--- a/src/main/resources/templates/group/manageGroup.html
+++ b/src/main/resources/templates/group/manageGroup.html
@@ -20,7 +20,7 @@
         <!-- /.row -->
         <div class="row">
             <div class="col-lg-12">
-                <div class="panel panel-green">
+                <div class="panel panel-primary">
                     <div class="panel-heading">
                         Create New Group
                     </div>
@@ -41,7 +41,7 @@
                                         <input type="hidden" th:if="${id != null}" name="createdOn" th:value="*{createdOn}" />
                                         <input type="hidden" th:if="${id != null}" name="createdOn" th:value="*{updatedOn}" />
 
-                                        <button type="submit" class="btn btn-green">Save</button>
+                                        <button type="submit" class="btn btn-primary">Save</button>
                                         <button type="reset" class="btn btn-warning">Reset</button>
                                     </form>
                                 </div>
