--- a/src/main/resources/templates/occasionList.html
+++ b/src/main/resources/templates/occasionList.html
@@ -12,22 +12,23 @@
 
     <!-- Page Content -->
     <div id="page-wrapper">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">Members</h1>
+        <div class="row" style="padding-bottom: 10px;">
+            <div class="col-lg-6">
+                <h1>Members</h1>
             </div>
-        </div>
-
-        <div class="alert alert-success alert-dismissable" th:if="${successMessage}">
-            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-            <span th:utext="${successMessage}"></span>
+            <div class="col-lg-6" style="margin-top: 25px;">
+                <select class="form-control selectpicker pull-right" data-width="25%" onchange="location = this.value;">
+                    <option th:value="@{/occasion/} + ${occasionType} + @{/30}" th:selected="*{noOfDays==30}">Next 30 Days</option>
+                    <option th:value="@{/occasion/} + ${occasionType} + @{/90}" th:selected="*{noOfDays==90}">Next 90 Days</option>
+                </select>
+            </div>
         </div>
 
         <div class="row">
             <div class="col-lg-12">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        All Members
+                        <span th:text="${occasionTitle}"></span>
                     </div>
                     <div class="panel-body">
                         <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
@@ -35,24 +36,18 @@
                             <tr>
                                 <th>Name</th>
                                 <th>Gender</th>
-                                <th>Birthdate</th>
+                                <th th:if="${occasionType == 'birthdays'}">Birth Date</th>
+                                <th th:if="${occasionType == 'anniversaries'}">Anniversary Date</th>
                                 <th>Created Date</th>
-                                <th>Updated Date</th>
-                                <th>Action</th>
                             </tr>
                             </thead>
                             <tbody>
                             <tr th:each="member : ${members}">
                                 <td th:text="*{member.firstName +' '+ member.middleName +' '+ member.lastName}" style="vertical-align: inherit"></td>
                                 <td th:text="${member.gender == 0 ? 'Male' : 'Female'}" style="vertical-align: inherit"></td>
-                                <td th:text="${member.birthDate} ? ${#dates.format(member.birthDate, 'dd-MM-yyyy')} : '-'" style="vertical-align: inherit"></td>
+                                <td th:if="${occasionType == 'birthdays'}" th:text="${member.birthDate} ? ${#dates.format(member.birthDate, 'dd MMMM')} : '-'" style="vertical-align: inherit"></td>
+                                <td th:if="${occasionType == 'anniversaries'}" th:text="${member.anniversaryDate} ? ${#dates.format(member.anniversaryDate, 'dd MMMM')} : '-'" style="vertical-align: inherit"></td>
                                 <td th:text="${member.createdOn} ? ${#dates.format(member.createdOn, 'dd-MM-yyyy')} : '-'" style="vertical-align: inherit"></td>
-                                <td th:text="${member.updatedOn} ? ${#dates.format(member.updatedOn, 'dd-MM-yyyy')} : '-'" style="vertical-align: inherit"></td>
-                                <td class="center">
-                                    <a th:href="@{/member/view(id=*{member.id})}" class="btn btn-outline btn-primary">Details</a>
-                                    <a th:href="@{/tree/generate(id=*{member.id})}" class="btn btn-outline btn-primary">Tree View</a>
-                                    <a th:href="@{/member/edit(id=*{member.id})}" class="btn btn-outline btn-primary">Edit</a>
-                                    <a th:href="@{/member/delete(id=*{member.id})}" class="btn btn-outline btn-danger">Delete</a></td>
                             </tr>
                             </tbody>
                         </table>
@@ -73,9 +68,7 @@
                 null,
                 { "width": "10%" },
                 { "width": "15%" },
-                { "width": "15%" },
-                { "width": "15%" },
-                { "width": "30%" },
+                { "width": "15%" }
             ]
         });
     });
